<resources>
    <string name="app_name">My Travels</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_default">Default</string>
    <string name="action_sort_travel_asc">Travel title ascending</string>
    <string name="action_sort_travel_desc">Travel title descending</string>
    <string name="action_sort_start_asc">Start date ascending</string>
    <string name="action_sort_start_desc">Start date descending</string>
    <string name="title_activity_new_travel">New Travel</string>
    <string name="title_activity_edit_travel">Edit Travel</string>
    <string name="travel_et_hint_enter_title">Enter Travel Title</string>
    <string name="travel_title_empty">Travel Title is empty!</string>
    <string name="travel_et_hint_start_dt">Start date</string>
    <string name="travel_et_hint_end_dt">End date</string>
    <string name="travel_et_hint_place">Select city</string>
    <string name="travel_city_empty">City is empty!</string>
    <string name="travel_startdt_empty">Start date is empty!</string>
    <string name="travel_enddt_empty">End date is empty!</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_delete">Delete</string>
    <string name="travel_del_title">Are you sure you want to delete?</string>
    <string name="travel_del_msg">All data for this travel will be permanently deleted.</string>
    <string name="title_activity_travel_detail">Travel Detail</string>
    <string name="title_frag_daily_plans">Daily Plans</string>
    <string name="title_frag_dairy">Diary</string>
    <string name="title_frag_expenses">Expenses</string>
    <string name="title_activity_plan_detail">Plan detail</string>
    <string name="title_activity_diary_detail">Diary detail</string>
    <string name="title_activity_expenses_detail">Expense detail</string>
    <string name="plan_edit_warn">Please input Title or select Place</string>
    <string name="diary_edit_warn">Please input Text or select Image</string>
    <string name="expense_edit_warn">Please input Amount and Title</string>
    <string name="expense_edit_exchange_warn">Please input Exchange Amount</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="input_date_hint">Date</string>
    <string name="input_time_hint">Time</string>
    <string name="input_place_hint">Place</string>
    <string name="input_plan_title_hint">Title</string>
    <string name="input_plan_desc_hint">Description</string>
    <string name="plan_for">Plan for</string>
    <string name="diary_for">Diary for</string>
    <string name="diary_desc_hint">Text</string>
    <string name="expenses_for">Expenses for</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_exch_curr_warn">Choose another currency</string>
    <string name="permission_dialog_title">Please grant those permissions"</string>
    <string name="permission_camera_gallery">Write External Storage permissions are required to do the task.</string>
    <string name="permission_camera_msg">Camera and Write External Storage permissions are required to do the task.</string>
    <string name="permission_not_granted">The required permissions are not approved.</string>
    <string name="delete_warn_msg">Do you want to cancel the deletion?</string>
    <string name="undo">UNDO</string>
    <string name="long_click_snackbar">Long click the item to edit</string>
    <string name="dont_show_again">DON\'T SHOW AGAIN</string>
    <string name="travel_longclick">Long click the item to edit it.</string>
    <string name="no_google_map">There are no Google Maps APPs.</string>
    <string name="destination">Destination</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="review">reviews</string>
    <string name="add_to_your_trips">Add to Your trips</string>
    <string name="create_trip">Create Trip</string>
    <string name="action_show_chart">Show Chart</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hotels">Hotels</string>
    <string name="restaurant">Restaurant</string>
    <string name="attractions">Attractions</string>
    <string name="drawer_up_coming_travels">Upcoming Travels</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_rating_us">Rating Us</string>
    <string name="drawer_send_feedback">Send Feedback</string>
    <string name="drawer_other">Other</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_up_coming_travels">Upcoming Travels</string>
    <string name="settings_activity_title">Settings</string>
    <string name="up_coming_travels_title">Upcoming Travels</string>
    <string name="drawer_features">Features</string>
    <string name="do_not_get_notifications_for_the_next_travels">Do not get notifications for the next travels</string>
    <string name="get_notifications_for_the_next_travels">Get notifications for the next travels</string>
    <string name="one_week">One Week</string>
    <string name="one_day">One Day</string>
    <string name="one_month">One Month</string>
    <string name="loading_location">Loading Location ...</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="login">Login</string>
    <string name="login_via_facebook">Login via Facebook</string>

    <string-array name="up_coming_day_array">
        <item>One Day</item>
        <item>One Week</item>
        <item>One Month</item>
    </string-array>

    <string-array name="notification_frequency_array">
        <item>One Minute</item>
        <item>One Day</item>
    </string-array>

    <string name="facebook_app_id">612716852490300</string>
    <string name="fb_login_protocol_scheme">fb612716852490300</string>
    <string name="skip">Skip</string>
    <string name="start_using_my_travels">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="english_default">English (Default)</string>
    <string name="get_notifications_every">Get Notifications every</string>
    <string name="one_minute">One Minute</string>
    <string name="tieng_viet">Tiếng Việt</string>
    <string name="korean">Korean</string>
</resources>
